Updated all files to have advice of the day api be above footer!

--- a/style.css
+++ b/style.css
@@ -6,16 +6,15 @@ img{
     background-color: orangered;
 }
 
-.grid-1 {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
-    grid-template-rows: 75px 1fr 1fr 1fr 1fr 50px;
-    /* height: 100vh; */
+#advice{
+    text-align: center;
+    margin: 10px;
 }
-
+#p {
+    
+}
 footer {
     background-color: whitesmoke;
     color: rgb(48, 44, 44);
-    grid-column: 1 / span 6;
-    grid-row: 6 / span 1;
+    padding: 5px;
 }
